--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,44 @@
-<div class="w-full mt-2 ml-2 font-bold">
-  Wishlist app
-  <button
-    *ngIf="isLoggedIn$ | async"
-    (click)="logOutTry()"
-    class="mr-6 rounded-md border bg-red-100 p-2 hover:bg-red-300 float-right"
-  >
-    Log out
-  </button>
-</div>
+<nav
+  class="bg-white px-2 sm:px-4 py-2.5 dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 h-14"
+>
+  <div class="container flex flex-wrap items-center justify-between mx-auto">
+    <a routerLink="dashboard" class="flex items-center self-center text-xl font-semibold whitespace-nowrap dark:text-white">
+      Wishlist app
+    </a>
+    
+    <div *ngIf="login.loggedIn" class="flex items-center">
+      <div class="flex items-center">
+        <div>
+          <button type="button" class="flex text-sm bg-gray-800 rounded-full focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" aria-expanded="false" (click)="dropdownToggle()" (clickOutside)="showDropdown = false">
+            <img class="w-8 h-8 rounded-full" src="../favicon.ico" alt="user photo">
+          </button>
+        </div>
+        <div *ngIf="showDropdown"  class=" absolute z-50 my-4 top-11 right-7 text-base list-none bg-white divide-y divide-gray-100 rounded shadow dark:bg-gray-700 dark:divide-gray-600">
+          <div class="px-4 py-3">
+            <p class="text-sm text-gray-900 dark:text-white">
+              Name Surname
+            </p>
+            <p class="text-sm font-medium text-gray-900 truncate dark:text-gray-300">
+              {{login.email}}
+            </p>
+          </div>
+          <ul class="py-1">
+            <li>
+              <a routerLink="dashboard" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
+            </li>
+            <li>
+              <a routerLink="dashboard" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white">Settings</a>
+            </li>
+            <li>
+              <a routerLink="dashboard" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</a>
+            </li>
+            <li>
+              <a class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white cursor-pointer" (click)="logOutTry()">Sign out</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
 <router-outlet></router-outlet>
