--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       Wishlist app
     </a>
     
-    <div *ngIf="login.loggedIn" class="flex items-center">
+    <div *ngIf="login.loggedIn" class="flex items-center select-none">
       <div class="flex items-center">
         <div>
           <button type="button" class="flex text-sm bg-gray-800 rounded-full focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" aria-expanded="false" (click)="dropdownToggle()" (clickOutside)="showDropdown = false">
@@ -16,7 +16,7 @@
         <div *ngIf="showDropdown"  class=" absolute z-50 my-4 top-11 right-7 text-base list-none bg-white divide-y divide-gray-100 rounded shadow dark:bg-gray-700 dark:divide-gray-600">
           <div class="px-4 py-3">
             <p class="text-sm text-gray-900 dark:text-white">
-              Name Surname
+              {{login.username}}
             </p>
             <p class="text-sm font-medium text-gray-900 truncate dark:text-gray-300">
               {{login.email}}
