--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -14,11 +14,19 @@
     >
       <div class="-space-y-px rounded-md shadow-sm">
         <input
+          id="username"
+          type="text"
+          formControlName="username"
+          required
+          class="relative block w-full rounded-t-md border-0 py-1.5 pl-2 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          placeholder="Username"
+        />
+        <input
           id="email-address"
           type="email"
           formControlName="email"
           required
-          class="relative block w-full rounded-t-md border-0 py-1.5 pl-2 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          class="relative block w-full border-0 py-1.5 pl-2 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:z-10 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
           placeholder="Email address"
         />
         <input
