--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <p class="mt-20 ml-4">Hello {{ login.username }}!</p>
 <div class="flex w-full justify-center mt-10">
   <button
-    [routerLink]="['/login']"
+    [routerLink]="['/create-event']"
     class="relative w-32 place-items-center bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
   >
     Join/create an event
