--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,1 +1,4 @@
 <p class="mt-20 ml-4">My events</p>
+<ul class="mt-4 ml-4"> Events list
+    <li class="mt-2 ml-2" *ngFor="let event of events">{{event}}</li>
+</ul>
