--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,4 +1,15 @@
-<p class="mt-20 ml-4">My events</p>
-<ul class="mt-4 ml-4"> Events list
-    <li class="mt-2 ml-2 cursor-pointer" *ngFor="let event of events" [routerLink]="['/add-item']">{{event}}</li>
-</ul>
+<div class="mt-16 bg-gray-100 min-h-screen">
+    <div class="container mx-auto px-4 py-8">
+      <h1 class="text-3xl font-bold text-gray-800 mb-8">My Events</h1>
+      <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+        <li *ngFor="let event of events" class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-lg cursor-pointer">
+          <a [routerLink]="['/event', event]" class="block">
+            <div class="p-4">
+              <h2 class="text-lg font-bold text-gray-800">{{ event }}</h2>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  
