--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,17 @@
-<nav
-  class="bg-white px-2 sm:px-4 py-2.5 dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 h-14"
->
-  <div class="container flex flex-wrap items-center justify-between mx-auto">
-    <a routerLink="dashboard" class="flex items-center self-center text-xl font-semibold whitespace-nowrap dark:text-white">
-      Wishlist app
+<nav class="bg-white px-4 sm:px-8 py-2 dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 h-16">
+  <div class="container flex items-center justify-between mx-auto">
+    <a routerLink="dashboard" class="text-xl font-semibold text-gray-900 dark:text-white">
+      Wishlist App
     </a>
-    
-    <div *ngIf="login.loggedIn" class="flex items-center select-none">
-      <div class="flex items-center">
-        <div>
-          <button type="button" class="flex text-sm bg-gray-800 rounded-full focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" aria-expanded="false" (click)="dropdownToggle()" (clickOutside)="showDropdown = false">
-            <img class="w-8 h-8 rounded-full" src="../favicon.ico" alt="user photo">
-          </button>
-        </div>
-        <div *ngIf="showDropdown"  class=" absolute z-50 my-4 top-11 right-7 text-base list-none bg-white divide-y divide-gray-100 rounded shadow dark:bg-gray-700 dark:divide-gray-600">
-          <div class="px-4 py-3">
-            <p class="text-sm text-gray-900 dark:text-white">
-              {{login.username}}
-            </p>
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-gray-300">
-              {{login.email}}
-            </p>
+    <div *ngIf="login.loggedIn" class="flex items-center">
+      <div class="relative">
+        <button type="button" class="flex items-center justify-center w-10 h-10 rounded-full bg-gray-800 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" aria-expanded="false" (click)="dropdownToggle()" (clickOutside)="showDropdown = false">
+          <img class="w-8 h-8 rounded-full" src="../favicon.ico" alt="user photo">
+        </button>
+        <div *ngIf="showDropdown" class="absolute z-50 mt-4 right-0 w-48 py-2 bg-white rounded shadow dark:bg-gray-700 dark:divide-gray-600">
+          <div class="px-4 py-3 border-b border-gray-200 dark:border-gray-600">
+            <p class="text-sm font-medium text-gray-900 truncate dark:text-white">{{login.username}}</p>
+            <p class="text-sm text-gray-500 dark:text-gray-400">{{login.email}}</p>
           </div>
           <ul class="py-1">
             <li>
@@ -30,7 +21,7 @@
               <a routerLink="events" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white">Events</a>
             </li>
             <li>
-              <a routerLink="create-event" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white">Create an event</a>
+              <a routerLink="create-event" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white">Create an Event</a>
             </li>
             <li>
               <a class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white cursor-pointer" (click)="logOutTry()">Sign out</a>
