--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,13 @@
-<p class="mt-20 ml-4">Hello {{ login.username }}!</p>
-<div class="flex w-full justify-center mt-10">
-  <button
-    [routerLink]="['/create-event']"
-    class="relative w-32 place-items-center bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
-  >
-    Join/create an event
-  </button>
-  <button
-    [routerLink]="['/events']"
-    class="relative w-32 ml-7 bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"
-  >
-    Your events
-  </button>
+<div class="flex flex-col items-center">
+  <p class="mt-20 text-xl font-semibold">Hello {{ login.username }}!</p>
+  <div class="flex justify-center mt-10 space-x-4">
+    <a [routerLink]="['/create-event']"
+       class="relative flex items-center justify-center w-48 py-2 px-4 text-white font-semibold bg-indigo-600 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+      Create an Event
+    </a>
+    <a [routerLink]="['/events']"
+       class="relative flex items-center justify-center w-48 py-2 px-4 text-white font-semibold bg-indigo-600 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+      Your Events
+    </a>
+  </div>
 </div>
