--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,9 +1,9 @@
 <div class="min-h-screen bg-gray-100 flex flex-col justify-center items-center">
-  <h1 class="text-6xl font-bold text-gray-900 mb-2">404</h1>
-  <p class="text-xl text-gray-600 mb-4">Page not found</p>
+  <h1 class="text-6xl font-bold text-gray-900 mb-8">Oops!</h1>
+  <p class="text-2xl text-gray-600 mb-8">We couldn't find the page you're looking for.</p>
   <a
     routerLink="/"
-    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+    class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-full focus:outline-none focus:shadow-outline"
     >Go Home</a
   >
 </div>
