--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -7,10 +7,7 @@
   >
     <div class="px-6 py-8 space-y-6">
       <div>
-        <label
-          for="name"
-          class="block text-gray-700 font-medium mb-2"
-        >
+        <label for="name" class="block text-gray-700 font-medium mb-2">
           Event name
         </label>
         <input
@@ -23,10 +20,7 @@
         />
       </div>
       <div>
-        <label
-          for="date"
-          class="block text-gray-700 font-medium mb-2"
-        >
+        <label for="date" class="block text-gray-700 font-medium mb-2">
           Date
         </label>
         <input
@@ -37,6 +31,22 @@
           class="w-full border-gray-300 px-4 py-2 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
           placeholder="Enter the event date"
         />
+        <div>
+          <label
+            for="password"
+            class="block text-gray-700 font-medium mb-2 mt-4"
+          >
+            Event password
+          </label>
+          <input
+            id="password"
+            type="text"
+            formControlName="password"
+            required
+            class="w-full border-gray-300 px-4 py-2 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
+            placeholder="Enter a password for other users"
+          />
+        </div>
       </div>
       <div class="flex items-center justify-end">
         <button
@@ -49,4 +59,32 @@
       </div>
     </div>
   </form>
+
+  <h2 class="text-2xl font-bold">Join an event</h2>
+  <div class="w-full max-w-lg bg-white rounded-lg shadow-md">
+    <div class="px-6 py-8 space-y-6">
+      <div>
+        <label for="name" class="block text-gray-700 font-medium mb-2">
+          Event password
+        </label>
+        <input
+          id="name"
+          type="text"
+          formControlName="name"
+          required
+          class="w-full border-gray-300 px-4 py-2 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
+          placeholder="Enter the event password"
+        />
+      </div>
+      <div class="flex items-center justify-end">
+        <button
+          [routerLink]="['/events']"
+          type="submit"
+          class="inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+        >
+          Join event
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
