--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -6,8 +6,9 @@
     <li>FakeItem</li>
     <li>FakeItem</li>
   </ul>
+  <!-- [routerLink]="['/',id,'add-item']" -->
   <button
-    routerLink="/add-item"
+  [routerLink]="['/add-item']"
     class="bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500 text-white font-bold py-2 px-4 rounded mt-4"
   >
     Add item
