added leaving events functionality.

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -13,4 +13,11 @@
   >
     Add item
   </button>
+  <button
+  (click)="leaveEvent()"
+  [routerLink]="['/events']"
+    class="bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500 text-white font-bold py-2 px-4 rounded mt-4"
+  >
+    Leave event
+  </button>
 </div>
