--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,7 +1,9 @@
 <div class="flex flex-col justify-center items-center h-screen">
   <p class="mt-20 ml-4 font-bold text-xl">{{ id }}</p>
   <ul class="ml-4">
-    <li *ngFor="let item of items">{{item}}</li>
+    <li *ngFor="let item of items">{{item}}
+      <button (click)="deleteItem()" class="ml-4"> Delete item</button>
+    </li>
 
   </ul>
 
