cleanup and redesign of events.

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,24 +1,47 @@
-<div class="flex flex-col justify-center items-center h-screen">
-  <p class="mt-20 ml-4 font-bold text-xl">{{ id }}</p>
-  <ul class="ml-4">
-    Name: Price: Link:
-    <li *ngFor="let item of items | keyvalue">{{item.value.name}} {{item.value.price}} {{item.value.link}}
-      <button (click)="deleteItem(item.value.name)" class="ml-4"> Delete item</button>
-    </li>
+<div class="flex flex-col justify-center items-center min-h-screen bg-gray-100">
+  <p class="mt-8 font-bold text-xl">{{ id }}</p>
 
-  </ul>
+  <table class="table-auto w-full mt-8">
+    <thead>
+      <tr>
+        <th class="px-4 py-2 text-left">Name</th>
+        <th class="px-4 py-2 text-left">Price</th>
+        <th class="px-4 py-2 text-left">Link</th>
+        <th class="px-4 py-2 text-left">Person</th>
+        <th class="px-4 py-2 text-left">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of items | keyvalue">
+        <td class="border px-4 py-2">{{ item.value.name }}</td>
+        <td class="border px-4 py-2">{{ item.value.price }}</td>
+        <td class="border px-4 py-2">{{ item.value.link }}</td>
+        <td class="border px-4 py-2">{{ item.value.user }}</td>
+        <td class="border px-4 py-2">
+          <button
+            (click)="deleteItem(item.value.name)"
+            class="bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded"
+          >
+            Delete
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
-  <button
-    [routerLink]="['/', id, 'add-item']"
-    class="bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500 text-white font-bold py-2 px-4 rounded mt-4"
-  >
-    Add item
-  </button>
-  <button
-    (click)="leaveEvent()"
-    [routerLink]="['/events']"
-    class="bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500 text-white font-bold py-2 px-4 rounded mt-4"
-  >
-    Leave event
-  </button>
+  <div class="flex justify-center mt-8">
+    <a
+      [routerLink]="['/', id, 'add-item']"
+      class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded mr-4"
+    >
+      Add Item
+    </a>
+    <button
+      (click)="leaveEvent()"
+      [routerLink]="['/events']"
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+    >
+      Leave Event
+    </button>
+  </div>
 </div>
