--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -2,14 +2,11 @@
     <div class="container mx-auto px-4 py-8">
       <h1 class="text-3xl font-bold text-gray-800 mb-8">My Events</h1>
       <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-        <li *ngFor="let event of events" class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-lg cursor-pointer">
-          <a [routerLink]="['/event', event]" class="block">
+        <li *ngFor="let event of events" (click)="goToEventDetails(event.id)" class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-lg cursor-pointer">
             <div class="p-4">
-              <h2 class="text-lg font-bold text-gray-800">{{ event }}</h2>
+              <h2 class="text-lg font-bold text-gray-800">{{ event.name }}</h2>
             </div>
-          </a>
         </li>
       </ul>
     </div>
   </div>
-  
