--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -31,6 +31,19 @@
       />
     </div>
     <div class="mb-4">
+      <label class="block text-gray-700 font-bold mb-2" for="note">
+        Note
+      </label>
+      <input
+        id="note"
+        type="text"
+        name="note"
+        formControlName="note"
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        required
+      />
+    </div>
+    <div class="mb-4">
       <label class="block text-gray-700 font-bold mb-2" for="link">
         Link
       </label>
