--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -6,6 +6,7 @@
       <tr>
         <th class="px-4 py-2 text-left">Name</th>
         <th class="px-4 py-2 text-left">Price(€)</th>
+        <th class="px-4 py-2 text-left">Note</th>
         <th class="px-4 py-2 text-left">Link</th>
         <th class="px-4 py-2 text-left">Person</th>
         <th class="px-4 py-2 text-left">Bought</th>
@@ -15,6 +16,7 @@
       <tr *ngFor="let item of items | keyvalue">
         <td class="border px-4 py-2">{{ item.value.name }}</td>
         <td class="border px-4 py-2">{{ item.value.price }}</td>
+        <td class="border px-4 py-2">{{ item.value.note }}</td>
         <td class="border px-4 py-2">
           <a
             [href]="item.value.link"
@@ -31,13 +33,13 @@
             *ngIf="item.value.user != this.login.username"
             [checked]="item.value.bought"
             type="checkbox"
-            (change)="updateBought(item.value.name, item.value.bought)"
+            (change)="updateBought(item.value.id, item.value.bought)"
           />
         </td>
         <td class="border px-4 py-2">
           <button
             *ngIf="item.value.user == this.login.username"
-            (click)="deleteItem(item.value.name)"
+            (click)="deleteItem(item.value.id)"
             class="bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded"
           >
             Delete
