--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -64,5 +64,13 @@
     >
       Leave Event
     </button>
+    <button
+    *ngIf="this.login.username == eventAdmin"
+      (click)="deleteEvent()"
+      [routerLink]="['/events']"
+      class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded ml-4"
+    >
+      Delete Event
+    </button>
   </div>
 </div>
