--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,6 +1,6 @@
-<div class="mt-16 bg-gray-100 min-h-screen">
+<div class="bg-gray-100 min-h-screen">
     <div class="container mx-auto px-4 py-8">
-      <h1 class="text-3xl font-bold text-gray-800 mb-8">My Events</h1>
+      <h1 class="mt-16 text-3xl font-bold text-gray-800 mb-8">My Events</h1>
       <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
         <li *ngFor="let event of events" (click)="goToEventDetails(event.id)" class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-lg cursor-pointer">
             <div class="p-4">
