--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -40,7 +40,7 @@
           <button
             *ngIf="item.value.user == this.login.username"
             (click)="deleteItem(item.value.id)"
-            class="bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded"
+            class="bg-rose-500 hover:bg-rose-700 text-white font-bold py-1 px-2 rounded"
           >
             Delete
           </button>
