Separate create/join events and visual changes.

--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -1,4 +1,4 @@
-<div class="py-8 mt-20">
+<div class="py-8 mt-20 w-1/4 items-center m-auto">
   <form
     [formGroup]="addItemForm"
     (ngSubmit)="addItem()"
